--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,15 @@ h1 {
 a {
   text-decoration: none;
 }
+.inptxtError {
+	border-color: rgb(211, 63, 63);
+}
+
+
 .error-text {
-	color: red;
+	color: rgb(211, 63, 63);
+	margin: 0;
+	margin-bottom: 30px;
   }
 
 /* ================================= 
